[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcf2tsv"
dynamic = ["version"]
description = "Convert VCF files to TSV format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "cyvcf2",
    "typer",
]

[project.scripts]
vcf2tsv = "vcf2tsv.cli:app"

[tool.hatch.version]
path = "vcf2tsv/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["vcf2tsv"]
